src/objects/Client_Interreferral__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Interreferrals</relationshipLabel>
        <relationshipName>Client_Interreferrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_By_PO__c</fullName>
        <label>Referred By PO</label>
        <picklist>
            <picklistValues>
                <fullName>Addiction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ademilola adesida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agnes M. Scully</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aidan P. Trant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aideen M. McDonnell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine E. Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine E. Morris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine M. Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aishling C. Bolger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan I. Doyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan M. Hughes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alice Garvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alma M. Gavin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Egan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambrose O&apos;Byrne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea D. Devine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea M. Bourke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew J. Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Crow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anita I. Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann A. OFarrell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. AlgostssonGallagher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. BradyWilliams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M.Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. Corcoran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Stoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna T. Rynn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann B. Ryan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Conway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne J. Ansbro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_From__c</fullName>
        <label>Referred From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Client Interreferral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IR-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Interreferrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>